Changes in 22.22
================
	* Fixed typo in fuser which has -M on Debian #740275

Changes in 22.21
================
	* Missing comma in fuser(1) added Debian #702391
	* pstree uses COLUMN env variable Debian #717017
	* pstree shows proper thread names SF Bug#57
	* pstree shows namespace options SF Patch#30
	* killall.1 minor fixes SF Bug#59
	* peekfd for m68k SF Patch#31
	* Fixing some derefefed pointers SF Patch#32
	* Minor typos in man pages SF Bug#61 Bug#60
	* fuser -m and -M flags work either way Debian #606178

Changes in 22.20
================
	* pstree sorts properly on names Debian #682014
	* fuser -m regresion fixed SF #3559232, thanks to hanpt
	* pstree finds orphaned processes SF#3537508
	* fuser finds unix sockets again SF #3502649
	* pstree finds pid 0 stops looping Debian #687829

Changes in 22.19
================
	* killall with no args exits again SF #3536526

Changes in 22.18
================
	* Added AC_CANONICAL_TARGET for target_os Debian #673485
	* sed doesn't have [0-9]+ replace with [0-9][0-9]*
	* assert in killall triggered for small lifetimes Debian #628617
	* killall MAX_NAMES off by one Debian #677428
	* Removed remaining parts of pidof

Changes in 22.17
================
	* Make it possible to use --enable-timeout-stat as well as
	  --enable-timeout-stat=static for a static background process which
	  does the final stat system calls
	* Do not mix HAVE_TIMEOUT_STAT with WITH_TIMEOUT_STAT
	* Add timeout.c/timeout.h for static background process which is able
	  to read the file name from pipe, does the stat(2) system call, and
	  writes the result back to a pipe.
	* Really add ASCII null at command string in add_proc() of pstree.c
	* fuser uses correct timeout_stat define Debian #661723
	* fuser is not compiled on hurd-i386 Debian #673485
	* No TEXTRELS in src/lists built as PIE on x86
	* Fake pstree root for kernels with hidepid turned on
	* More fixes for Cygwin SF Patch #3511920
	* pstree can show PGIDs SF Patch #3471056
